[tool.poetry]
name = "leetcode-prep"
version = "0.1.0"
description = ""
authors = ["superoverflow <cyrus.tang@superoverflow.com>"]
readme = "README.md"
packages = [{include = "leetcode_prep"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
