[tool.poetry]
name = "leetcode-prep"
version = "0.1.0"
description = ""
authors = ["superoverflow <cyrus.tang@superoverflow.com>"]
readme = "README.md"
packages = [{include = "leetcode_prep"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "*"
pytest = "*"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
